Address sonar qube issues